# bp-monitor-ocr

./: .gitignore  ALGORITHM.md  Dockerfile  INTEGRATION.md  LICENSE  README.md  api.py  app.py  pyproject.toml  requirements.txt
configs/device_profiles/: accuchek_active.yaml  example_device.yaml  glucose_meter_example.yaml  medisign_mm1100.yaml  omron_hem7121.yaml  oncall_plus.yaml  oncall_plus_v2.yaml  sannuo.yaml  vivachek_ino.yaml
docs/: CALIBRATION_GUIDE.md
scripts/: evaluate.py  quick_test.py  run_inference.py  visual_report.py
src/bp_ocr/: __init__.py  pipeline.py  postprocess.py  preprocessing.py  roi.py  rule_based.py  schema.py  screen_detection.py
tests/: conftest.py  test_postprocess.py  test_rule_based.py
