[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bp-monitor-ocr"
version = "0.1.0"
description = "Nhan dang chi so huyet ap (SYS/DIA/PULSE) tu anh chup man hinh may do dien tu"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
